name:                hs-processes-bench
version:             0.1
synopsis:            Compare process and typed-process performance
description:
        Simple benchmark using criterion to compare the basic performance
        overhead of typed-process over the default process library.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2020  Jens Petersen <juhpetersen@gmail.com>
category:            Unclassified
homepage:            https://github.com/juhp/hs-processes-bench
bug-reports:         https://github.com/juhp/hs-processes-bench/issues
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       1.18

source-repository head
  type:                git
  location:            https://github.com/juhp/hs-processes-bench.git

executable hs-processes-bench
  main-is:             Main.hs
  build-depends:       base < 5,
                       bytestring,
                       criterion,
                       process,
                       typed-process
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
